<resources>
    <string name="app_name">Puissance4</string>
    <string name="nombre_joueurs">Nombre de joueurs</string>
    <string name="largeur">Largeur du plateau</string>
    <string name="hauteur">Hauteur du plateau</string>
    <string name="taille">Taille du plateau</string>
    <string name="joueurs">Joueurs</string>
    <string name="partie">Creer partie</string>
    <string name="btn_ajouter">Ajouter</string>
    <string name="txt_nombre_joueur">Joueur 1</string>
    <string name="edt_nom">Saissisez le nom</string>
    <string name="btn_delete">Supprimer</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="quantity">Quantity</string>

    <string name="text_width">Width: %1$d</string>
    <string name="text_height">Height: %1$d</string>
    <string name="text_quantity">Players quantity: %1$d</string>
    <string name="alert_content">%1$s</string>
    <string name="ok_button">Ok</string>
    <string name="player_name">Player %1$d</string>
    <string name="content_player_description">player avatar</string>
    <string name="player_name_sample">Player 10</string>
    <string name="colonne_description">Colonne du plateau</string>
    <string name="dialog_win_title">Victoire</string>
    <string name="dialog_draw_title">Egal</string>

    <string name="bouton_ok">Ok</string>
    <string name="bouton_non">Non</string>

    <string-array name="players_quantity">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
